fix signup-as page issue

--- a/signup.html
+++ b/signup.html
@@ -20,7 +20,7 @@
                     </div>
                     <div class="login-wraper-inner max-w-[450px] mx-auto sm:mt-[120px] mt-[60px]">
                         <h3 class="heading dm-serif 
-                        leading-[1.25] font-[400] text-[2rem] mb-[44px] text-[var(--color-0)]">Login to your account</h3>
+                        leading-[1.25] font-[400] text-[2rem] mb-[44px] text-[var(--color-0)]">Create your account</h3>
                         <form action="#" method="get" class="flex flex-col gap-[24px]">
                             <div class="input-wraper flex mobilexl:flex-row flex-col gap-[16px]">
                                 <input type="text" name="first-name" id="fname" placeholder="First name" class="input-field w-[100%] bg-color3 px-4 py-3.5 rounded-[10px] focus:outline-0 text-color0 text-[1rem] font-[600] placeholder:text-color0 placeholder:text-[1rem] placeholder:font-[600] flex-1">
