--- a/signup-as.html
+++ b/signup-as.html
@@ -80,7 +80,7 @@
                                 </div>
                                 <div class="button-wraper">
                                     <a href="javascript:void(0)" class="bg-color6 p-4 rounded-[10px] w-[100%] text-[#fff] text-[1rem] text-center transition-all duration-300 hover:opacity-80">
-                                        Sign in
+                                        Sign up
                                     </a>
                                     <div class="or-login-with flex items-center gap-[24px] mt-[32px] mb-[24px]">
                                         <div class="line bg-color7 h-[1px] flex-1"></div>
@@ -116,7 +116,7 @@
                 <div class="right-part bg-color4 py-[40px] bg-[url('./assets/images/login.png');] bg-no-repeat bg-center bg-cover h-[100%]">
                     <div class="custom-slick-dots py-[40px] img-slider-item-wraper global-slick-init flex flex-wrap w-[100%] h-[100%] items-center " data-infinite="true" data-autoplay="true" data-speed="3000"  data-dots="true">
                         <div class="img-slider-item h-[100%] flex flex-col place-content-center px-[20px]">
-                            <div class="img-part max-w-[736px] max-h-[618px] aspect-[2/3] mx-auto">
+                            <div class="img-part max-w-[736px] max-h-[618px] aspect-[3/2] mx-auto">
                                 <img src="./assets/images/login-s1.png" class="h-[100%] w-[100%] object-cover" alt="login slider">
                             </div>
                             <div class="text-part max-w-[520px] mx-auto mt-[30px]">
@@ -124,7 +124,7 @@
                             </div>
                         </div>
                         <div class="img-slider-item h-[100%] flex flex-col place-content-center px-[20px]">
-                            <div class="img-part max-w-[736px] max-h-[618px] aspect-[2/3] mx-auto">
+                            <div class="img-part max-w-[736px] max-h-[618px] aspect-[3/2] mx-auto">
                                 <img src="./assets/images/login-s2.png" class="h-[100%] w-[100%] object-cover" alt="login slider">
                             </div>
                             <div class="text-part max-w-[520px] mx-auto mt-[30px]">
