--- a/index.html
+++ b/index.html
@@ -21,44 +21,47 @@
                         </div>
                         <button class="navbar-toggler md:hidden"><i class="fa-solid fa-bars"></i></button>
                     </div>
-                    <div class="navbar-collapse group hidden md:block absolute top-[calc(100%+40px)] left-0 right-0  md:static md:z-auto z-[1] md:transition-none transition-all duration-[.3s] ease-in-out">
+                    <div class="navbar-collapse group bg-[#fff] hidden opacity-0 md:opacity-100 md:block absolute top-[calc(100%+40px)] left-0 right-0  md:static md:z-auto z-[1] md:transition-none transition-all duration-[.8s] ease-in-out">
                         <ul class="navbar-nav flex md:flex-row flex-col tracking-[1px] flex-wrap *:items-center *:flex md:py-[0px] py-[12px] md:gap-[0px] gap-[12px]">
-                            <li class="group menu-item menu-item-has-children">
-                                <a href="javscript:void(0)" class="px-[12px] relative text-color5 transition-all duration-[.1s]  group-[.active]:font-[600]">Home<span class="absolute opacity-0 h-[1px] transition-all duration-[.3s] bg-color5 bottom-[3px] left-[12px] right-[12px] group-[.active]:opacity-100 .menu-item-hover:opacity-100"></span></a>
-                                <i class="fa-solid fa-angle-down text-color5 me-2 leading-[1.5] hidden group-[.menu-item-has-children]/item-1:inline-block"></i>
+                            <li class="group/home menu-item active">
+                                <a href="javscript:void(0)" class="px-[12px] relative text-color5 transition-all duration-[.1s]  group-[.active]/home:font-[600] group-hover/home:font-[600]">Home<span class="absolute opacity-0 h-[1px] transition-all duration-[.3s] bg-color5 bottom-[3px] left-[12px] right-[12px] group-[.active]/home:opacity-100 group-hover/home:opacity-100"></span></a>
+                                <i class="fa-solid fa-angle-down text-color5 me-2 leading-[1.5] hidden group-[.menu-item-has-children]:inline-block"></i>
                             </li>
-                            <li class="group menu-item">
-                                <a href="javscript:void(0)" class="px-[12px] text-color5">About</a>
-                                <i class="fa-solid fa-angle-down text-color5 me-2 relative top-[1px] hidden group-[.menu-item-has-children]:inline-block"></i>
+                            <li class="group/about menu-item">
+                                <a href="javscript:void(0)" class="px-[12px] relative text-color5 transition-all duration-[.1s]  group-[.active]/about:font-[600] group-hover/about:font-[600]">About<span class="absolute opacity-0 h-[1px] transition-all duration-[.3s] bg-color5 bottom-[3px] left-[12px] right-[12px] group-[.active]/about:opacity-100 group-hover/about:opacity-100"></span></a>
+                                <i class="fa-solid fa-angle-down text-color5 me-2 leading-[1.5] hidden group-[.menu-item-has-children]:inline-block"></i>
                             </li>
-                            <li class="group menu-item">
-                                <a href="javscript:void(0)" class="px-[12px] text-color5">Recommender</a>
-                                <i class="fa-solid fa-angle-down text-color5 me-2 relative top-[1px] hidden group-[.menu-item-has-children]:inline-block"></i>
+                            <li class="group/recomender menu-item">
+                                <a href="javscript:void(0)" class="px-[12px] relative text-color5 transition-all duration-[.1s]  group-[.active]/recomender:font-[600] group-hover/recomender:font-[600]">Recommender<span class="absolute opacity-0 h-[1px] transition-all duration-[.3s] bg-color5 bottom-[3px] left-[12px] right-[12px] group-[.active]/recomender:opacity-100 group-hover/recomender:opacity-100"></span></a>
+                                <i class="fa-solid fa-angle-down text-color5 me-2 leading-[1.5] hidden group-[.menu-item-has-children]:inline-block"></i>
                             </li>
-                            <li class="group menu-item ">
-                                <a href="javscript:void(0)" class="px-[12px] text-color5">Seller</a>
-                                <i class="fa-solid fa-angle-down text-color5 me-2 relative top-[1px] hidden group-[.menu-item-has-children]:inline-block"></i>
+                            <li class="group/seller menu-item">
+                                <a href="javscript:void(0)" class="px-[12px] relative text-color5 transition-all duration-[.1s]  group-[.active]/seller:font-[600] group-hover/seller:font-[600]">Seller<span class="absolute opacity-0 h-[1px] transition-all duration-[.3s] bg-color5 bottom-[3px] left-[12px] right-[12px] group-[.active]/seller:opacity-100 group-hover/seller:opacity-100"></span></a>
+                                <i class="fa-solid fa-angle-down text-color5 me-2 leading-[1.5] hidden group-[.menu-item-has-children]:inline-block"></i>
                             </li>
-                            <li class="group menu-item">
-                                <a href="javscript:void(0)" class="px-[12px] text-color5">Buyer</a>
-                                <i class="fa-solid fa-angle-down text-color5 me-2 relative top-[1px] hidden group-[.menu-item-has-children]:inline-block"></i>
+                            <li class="group/buyer menu-item">
+                                <a href="javscript:void(0)" class="px-[12px] relative text-color5 transition-all duration-[.1s]  group-[.active]/buyer:font-[600] group-hover/buyer:font-[600]">Buyer<span class="absolute opacity-0 h-[1px] transition-all duration-[.3s] bg-color5 bottom-[3px] left-[12px] right-[12px] group-[.active]/buyer:opacity-100 group-hover/buyer:opacity-100"></span></a>
+                                <i class="fa-solid fa-angle-down text-color5 me-2 leading-[1.5] hidden group-[.menu-item-has-children]:inline-block"></i>
                             </li>
-                            <li class="group menu-item">
-                                <a href="javscript:void(0)" class="px-[12px] text-color5">FAQ</a>
-                                <i class="fa-solid fa-angle-down text-color5 me-2 relative top-[1px] hidden group-[.menu-item-has-children]:inline-block"></i>
+                            <li class="group/faq menu-item">
+                                <a href="javscript:void(0)" class="px-[12px] relative text-color5 transition-all duration-[.1s]  group-[.active]/faq:font-[600] group-hover/faq:font-[600]">FAQ<span class="absolute opacity-0 h-[1px] transition-all duration-[.3s] bg-color5 bottom-[3px] left-[12px] right-[12px] group-[.active]/faq:opacity-100 group-hover/faq:opacity-100"></span></a>
+                                <i class="fa-solid fa-angle-down text-color5 me-2 leading-[1.5] hidden group-[.menu-item-has-children]:inline-block"></i>
                             </li>
-                            <li class="group menu-item">
-                                <a href="javscript:void(0)" class="px-[12px] text-color5">Contact Us</a>
-                                <i class="fa-solid fa-angle-down text-color5 me-2 relative top-[1px] hidden"></i>
+                            <li class="group/contact-us menu-item">
+                                <a href="javscript:void(0)" class="px-[12px] relative text-color5 transition-all duration-[.1s]  group-[.active]/contact-us:font-[600] group-hover/contact-us:font-[600]">Contact Us<span class="absolute opacity-0 h-[1px] transition-all duration-[.3s] bg-color5 bottom-[3px] left-[12px] right-[12px] group-[.active]/contact-us:opacity-100 group-hover/contact-us:opacity-100"></span></a>
+                                <i class="fa-solid fa-angle-down text-color5 me-2 leading-[1.5] hidden group-[.menu-item-has-children]:inline-block"></i>
                             </li>
                         </ul>
                     </div>
-                    <div class="navbar-right-icon flex shrink-[0]">
-                        <div class="right-icon-1">
-                            <a href="javscript:void(0)" class="px-[12px] text-color5">Log in</a>
-                        </div>
-                        <div class="right-icon-2">
-                            <a href="javscript:void(0)" class="px-[12px] text-color5">Register Now</a>
+                    <div class="group/navbar-right-icon-wraper shrink-[0] rlative">
+                        <div class="icon md:hidden"><i class="fa-solid fa-user"></i></div>
+                        <div class="navbar-right-icon bg-[#fff] md:p-0 p-[12px] rounded-[5px] md:flex md:flex-row flex-col md:static absolute right-0 top-[calc(100%+40px)] z-[1] hidden group-hover/navbar-right-icon-wraper:flex">
+                            <div class="right-icon-1">
+                                <a href="javscript:void(0)" class="px-[12px] text-color5">Log in </a>
+                            </div>
+                            <div class="right-icon-2">
+                                <a href="javscript:void(0)" class="px-[12px] text-color5">Register Now</a>
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -67,41 +70,47 @@
     </header>
     <div class="main">
         <section class="hero-section">
-            <div class="container-1440">
+            <div class="hero-section-wraper">
                 <div class="banner-wraper">
-                    <div class="banner-slider-wraper global-slick-init" data-infinite="true" data-autoplay="false" data-speed="6000" data-dots="true" data-arrows="true" data-prevarrow="<div class='prev-icon slick-arrow'><i class='fa-solid fa-arrow-left'></i></div>" data-nextarrow="<div class='next-icon slick-arrow'><i class='fa-solid fa-arrow-right'></i></div>" data-appendarrows=".slider-arrwos" data-appenddots=".slider-dots">
-                        <div class="banner-slider-item h-[581px] w-[100%] relative">
+                    <div class="banner-slider-wraper global-slick-init" data-infinite="true" data-autoplay="false" data-speed="1000" data-dots="true" data-arrows="true" data-prevarrow="<div class='prev-icon slick-arrow'><i class='fa-solid fa-arrow-left'></i></div>" data-nextarrow="<div class='next-icon slick-arrow'><i class='fa-solid fa-arrow-right'></i></div>" data-appendarrows=".slider-arrwos" data-appenddots=".slider-dots">
+                        <div class="banner-slider-item mobile:h-[581px] h-[400px] w-[100%] relative">
                             <img src="./assets/images/slide-item.png" alt="slider" class="h-[100%] w-[100%] object-cover">
-                            <div class="text-part-wraper absolute top-[50%] left-[95px] translate-y-[-50%]">
-                                <div class="text-part max-w-[472px]">
-                                    <h1 class="font-[700] text-[2.5rem] text-color1 italic leading-[1.13] tracking-[1px]">Discover Here the very Best of British Merchandise & Products</h1>
-                                    <p class="text-[1.25rem] text-color1 my-[17px] lato">All together at your fingertips in one place.</p>
-                                    <div class="btn-wraper">
-                                        <a href="javascript:void(0)" class="btn btn-1 text-[#ffffff] text-center font-[600] py-[14px] px-[20px] bg-color6 rounded-[5px] w-[228px]">Join Us Now</a>
+                            <div class="container-1440">
+                                <div class="text-part-wraper absolute top-[50%] translate-y-[-50%]">
+                                    <div class="text-part max-w-[472px]">
+                                        <h1 class="font-[700] mobile:text-[2.5rem] text-[1.8rem] text-color1 italic leading-[1.13] tracking-[1px]">Discover Here the very Best of British Merchandise & Products</h1>
+                                        <p class="text-[1.25rem] text-color1 my-[17px] lato">All together at your fingertips in one place.</p>
+                                        <div class="btn-wraper">
+                                            <a href="javascript:void(0)" class="btn btn-1 text-[#ffffff] text-center font-[600] py-[14px] px-[20px] bg-color6 rounded-[5px] w-[228px]">Join Us Now</a>
+                                        </div>
                                     </div>
                                 </div>
                             </div>
                         </div>
-                        <div class="banner-slider-item h-[581px] w-[100%] relative">
+                        <div class="banner-slider-item mobile:h-[581px] h-[400px] w-[100%] relative">
                             <img src="./assets/images/slide-item.png" alt="slider" class="h-[100%] w-[100%] object-cover">
-                            <div class="text-part-wraper absolute top-[50%] left-[95px] translate-y-[-50%]">
-                                <div class="text-part max-w-[472px]">
-                                    <h1 class="font-[700] text-[2.5rem] text-color1 italic leading-[1.13] tracking-[1px]">Discover Here the very Best of British Merchandise & Products</h1>
-                                    <p class="text-[1.25rem] text-color1 my-[17px] lato">All together at your fingertips in one place.</p>
-                                    <div class="btn-wraper">
-                                        <a href="javascript:void(0)" class="btn btn-1 text-[#ffffff] text-center font-[600] py-[14px] px-[20px] bg-color6 rounded-[5px] w-[228px]">Join Us Now</a>
+                            <div class="container-1440">
+                                <div class="text-part-wraper absolute top-[50%] translate-y-[-50%]">
+                                    <div class="text-part max-w-[472px]">
+                                        <h1 class="font-[700] mobile:text-[2.5rem] text-[1.8rem] text-color1 italic leading-[1.13] tracking-[1px]">Discover Here the very Best of British Merchandise & Products</h1>
+                                        <p class="text-[1.25rem] text-color1 my-[17px] lato">All together at your fingertips in one place.</p>
+                                        <div class="btn-wraper">
+                                            <a href="javascript:void(0)" class="btn btn-1 text-[#ffffff] text-center font-[600] py-[14px] px-[20px] bg-color6 rounded-[5px] w-[228px]">Join Us Now</a>
+                                        </div>
                                     </div>
                                 </div>
                             </div>
                         </div>
-                        <div class="banner-slider-item h-[581px] w-[100%] relative">
+                        <div class="banner-slider-item mobile:h-[581px] h-[400px] w-[100%] relative">
                             <img src="./assets/images/slide-item.png" alt="slider" class="h-[100%] w-[100%] object-cover">
-                            <div class="text-part-wraper absolute top-[50%] left-[95px] translate-y-[-50%]">
-                                <div class="text-part max-w-[472px]">
-                                    <h1 class="font-[700] text-[2.5rem] text-color1 italic leading-[1.13] tracking-[1px]">Discover Here the very Best of British Merchandise & Products</h1>
-                                    <p class="text-[1.25rem] text-color1 my-[17px] lato">All together at your fingertips in one place.</p>
-                                    <div class="btn-wraper">
-                                        <a href="javascript:void(0)" class="btn btn-1 text-[#ffffff] text-center font-[600] py-[14px] px-[20px] bg-color6 rounded-[5px] w-[228px]">Join Us Now</a>
+                            <div class="container-1440">
+                                <div class="text-part-wraper absolute top-[50%] translate-y-[-50%]">
+                                    <div class="text-part max-w-[472px]">
+                                        <h1 class="font-[700] mobile:text-[2.5rem] text-[1.8rem] text-color1 italic leading-[1.13] tracking-[1px]">Discover Here the very Best of British Merchandise & Products</h1>
+                                        <p class="text-[1.25rem] text-color1 my-[17px] lato">All together at your fingertips in one place.</p>
+                                        <div class="btn-wraper">
+                                            <a href="javascript:void(0)" class="btn btn-1 text-[#ffffff] text-center font-[600] py-[14px] px-[20px] bg-color6 rounded-[5px] w-[228px]">Join Us Now</a>
+                                        </div>
                                     </div>
                                 </div>
                             </div>
