tell about your store page add

--- a/index.html
+++ b/index.html
@@ -57,10 +57,10 @@
                         <div class="icon md:hidden"><i class="fa-solid fa-user"></i></div>
                         <div class="navbar-right-icon bg-[#fff] md:p-0 p-[12px] rounded-[5px] md:flex md:flex-row flex-col md:static absolute right-0 top-[calc(100%+40px)] z-[1] hidden group-hover/navbar-right-icon-wraper:flex">
                             <div class="right-icon-1">
-                                <a href="javscript:void(0)" class="px-[12px] text-color5">Log in </a>
+                                <a href="login.html" class="px-[12px] text-color5">Log in </a>
                             </div>
                             <div class="right-icon-2">
-                                <a href="javscript:void(0)" class="px-[12px] text-color5">Register Now</a>
+                                <a href="signup-as.html" class="px-[12px] text-color5">Register Now</a>
                             </div>
                         </div>
                     </div>
